# snake-game

./: .gitignore  CMakeLists.txt  Debug.lnk  README.md
src/: ClassyEnum.hpp  Config.hpp  Game.cpp  Game.hpp  Global.hpp  Round.cpp  Round.hpp  Screens.cpp  Screens.hpp  main.cpp
